<resources>
    <string name="app_name">Photo_gallery</string>
    <string name="create_album">Create album</string>
    <string name="photo">Photo</string>
    <string name="album">Album</string>
    <string name="secret">Secret</string>
    <string name="favorite">Favourite</string>
    <string name="share">Share</string>
    <string name="edit_photo">Edit photo</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="insert_to_search">Insert to search</string>
    <string name="camera">Camera</string>
    <string name="multiSelect">Multiselect</string>
    <string name="settings">Setting</string>
    <string name="night_mode_activated"> Night mode is activated</string>
    <string name="night_mode_deactivated"> Night mode is deactivated</string>
    <string name="gif">Create GIF</string>
    <string name="slideshow">Slide Show</string>
    <string name="addAlbum">Add To Album</string>
    <string name="multi_create_album">Create Album</string>
    <string name="delete1">Xóa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="anti_clockspin_transformation" translatable="false">ANTI CLOCKSPIN TRANSFORMATION</string>
    <string name="zoom_out_transformation" translatable="false">ZOOM OUT TRANSFORMATION</string>
    <string name="depth_transformation" translatable="false">DEPTH TRANSFORMATION</string>
    <string name="exif_data">Exif Data</string>
    <string name="unkown">Unkown</string>
    <string name="name">Name</string>
    <string name="producer">Producer</string>
    <string name="unknown">Unknown</string>
    <string name="model">Model</string>
    <string name="size">Size</string>
    <string name="focal_length">Focal length</string>
    <string name="flash">Flash</string>
    <string name="author">Author</string>
    <string name="QRscan">QR Scan</string>

    <!--    secret-->
    <string name="enter_your_password">Enter your password</string>
    <string name="enter">Enter</string>
    <string name="create_password">Create Password</string>
    <string name="question_for_getting_back_password">Question for getting back password</string>
    <string name="write_your_question">Write your question</string>
    <string name="your_answer_for_the_question_above">Your answer for the question above</string>
    <string name="create">Create</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="question">Question</string>
    <string name="your_answer">Your answer</string>
    <string name="confirm">Confirm</string>
    <string name="forgot_password">Forgot password</string>
    <string name="change_password">Change Password</string>
    <string name="delete_secret_album">Delete Secret Album</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="restore">Restore</string>

</resources>